<resources>
    <string name="app_name">BAIS V &amp; TBPS </string>
    <string name="P01">"<b>"P01. Starting with the head of household"</b>", please give me names of all persons who spent the night with this household last night.
        "<b>"Make sure to include: "\n
        1. Usual members who did not spend the night but will be available in any of the next 5 days
        \n\n
        2. Persons who were away last night on duty, prayer meetings, wake keeping, etc.
        \n\n
        3. Babies, newly born, elderly, persons with disability who slept with this household.
        \n\n
        4. Visitors</b>
        "
    </string>
    <string name="P02">
      P02.  What is # \'s relationship to * (Head of House)?

    </string>
    <string name="IndQuesInfo">
        <b>PURPOSE OF THE SURVEY</b>\n
This survey will help us to know how many people in Botswana have HIV, how many people have TB and need health services. It will also tell us about people’s risk for getting HIV and TB. We plan to ask about 16 000 individuals to join this survey. If you participate, your taking part will help MoHW make health services better in the country.
\n\n
        <b>SURVEY PROCEDURES</b>
       \n\n
        <b>INTERVIEWS</b>
      \n

If you do participate in this survey, we will ask you questions about your demographics, past experience with HIV services, and your behavior. The interview will take about 45 minutes.
\n\n
        <b>BLOOD DRAW, TESTING, AND RETURNING OF RESULTS:</b>\n
We will ask you for consent to draw blood from you in order to conduct HIV testing and other laboratory based HIV-related tests. We will use a needle to take less than a teaspoon of your blood from your arm. If it’s not possible to take blood from your arm, then we will try to take a few drops of blood from your finger. If you need to know your results the testing and counseling session will be done here in your home and will take about 40 minutes.
        <br />\n\n
If you test positive for HIV, we will send your blood to a laboratory to measure the amount of HIV in your blood. This result will be available at the health facility of your choice within 8 to 10 weeks. You may or may not be selected for other additional tests related to HIV. If you are selected, some of your blood sample will be sent to other laboratories. If we have test results that might help guide your care or treatment, we will attempt to contact you to notify you when your results are ready for collection from a health facility of your choice.<br />\n\n
Your participation in the survey is voluntary and if you decide to participate, you may change your mind at any time and stop taking part. If you decide not to take part, it will not affect access to healthcare in any way.<br />\n\n
        <b>STORAGE OF SPECIMENS</b><br />\n
We would also ask for your permission to store your remaining blood in a specimen bank at the National Health Laboratory (NHL) for future research tests. These tests may be used for future research on HIV/AIDS and TB. This sample will be stored for five years. Your remaining blood will not be sold or used for commercial reasons. If you do not agree to long-term storage of your blood samples, we will destroy the samples after survey-related tests have been completed.<br />\n\n
Your participation in the survey is voluntary and if you decide to participate, you may change your mind at any time and stop taking part. If you decide not to take part, it will not affect your healthcare in any way.<br />\n\n
        <b>RISKS</b>\n
The risks of participation are minimal. We will do everything we can to keep your information confidential. You may feel uncomfortable about some of the questions we will ask and you may refuse to answer any question. If you take part, you will be offered free testing for HIV.\n\n
        <b>BENEFITS</b>\n
Your participation in the survey will inform you of your HIV status. HIV positive patients will receive counseling and linkage to free care and treatment. The information you provide will also be used to improve the health of Batswana. Your responses will help us develop more effective programs to fight HIV and other diseases in Botswana.\n\n
        <b>COSTS</b>\n
There is no cost to you for being part of the survey and you will not be paid for your participation.\n\n
        <b>CONFIDENTIALITY</b>\n
What we talk about during the survey will be kept private, even from your family, and will not be shown to anyone outside of the survey team.  Your answers to the questions will be identified only by a number and not by your name. Your name will not appear on any survey results that we share with MoHW, publishing or presented at scientific meetings. The information we collect during the survey will not be released outside of the survey groups listed unless there is an issue of safety.\n\n
The following individuals and/or agencies will be able to look at your interview records to help oversee the conduct of this survey:\n\n
        1. Staff members from Institutional Review Boards or Ethics Committees overseeing the conduct of this survey to ensure that we are protecting your rights as a person taking part in the survey. These include the Botswana Human Research Development Committee (HRDC), the Institutional Review Boards at the Centers for Disease Control and Prevention (CDC) and the WHO Task Force for TB. \n\n
2. Survey staff and monitors.\n\n
Your permission to allow us to use and share your information with the groups above will expire five years after the end of the survey. If during or post the survey you want your information to be removed from the survey data, or have any questions about the survey, or feel that you have been harmed by taking part, you should contact the Botswana Human Research Development Committee (HRDC) and NACA, MoHW:\n\n
        <b>Principal Investigator:</b>\n
Oaitse I Motsamai, MPH, DrPH, (NACA-Research Monitoring and Evaluation)\n
<b>Phone Number:</b> +267-3710314.  <b>Fax Number:</b> +267-3170960.\n
<b>Physical Address:</b> Unit 9, Westgate Mall Western By-Pass Phase 2.\n
Private Bag 00463 Gaborone\n
<b>Phone:</b> +267 3654811\n
<b>Email:</b> oimotsamai@gmail.com\n
\n\n
If you have any questions about your rights as a participant in this survey, you can contact HRDC using the following addresses:
\n\n
Chairperson of Botswana Human Research Development Committee\n
Plot 54609, Government Enclave\n
Private Bag 0038, Gaborone\n
        <a href="http://www.moh.gov.bw">www.moh.gov.bw</a>\n
\n
At this time, do you want to ask me anything about: Your blood being taken in your home? Testing your blood in the laboratory?\n\n

        <b>PERMISSION STATEMENT</b>\n\n
This consent form has been read out to you and you have been given a copy. Any questions that you had have been answered satisfactorily. You know that after choosing to participate in the survey, you may withdraw at any time if you so wish. You know that your participation is voluntary. You have been given sufficient time to consent.\n
 </string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="action_settings">Settings</string>
    <string name="strLogout">Log out</string>
    <string name="action_sync">Synchronize</string>
    <string name="Q504_Other">Other, specify</string>
    <string name="q603">
      Q603.  How can people prevent becoming infected with HIV?
       ....................MULTIPLE RESPONSE
                     .......... NOT A READOUT

    </string>
    <string name="q603_1">1. Use Condoms</string>
    <string name="q603_2">2. Have fewer partners</string>
    <string name="q603_3">3. Both partners have no other partners</string>
    <string name="q603_4">4. No casual sex</string>
    <string name="q603_5">5. Abstinence</string>
    <string name="q603_6">6. No Commercial sex</string>
    <string name="q603_7">7. Avoid injections with Contaminated needles</string>
    <string name="q603_8">8. Avoid Blood Transfusions</string>
    <string name="q603_9">9. Dont know any</string>
    <string name="q603_other">Other Specify</string>
    <string name="q616">
      Q616. In your opinion, who can be infected with TB? ............MULTIPLE RESPONSES ........NOT A READ OUT

    </string>
    <string name="q616_1">1. Anybody</string>
    <string name="q616_2">2. Poor people </string>
    <string name="q616_3">3. Homeless people</string>
    <string name="q616_4">4. Alcoholics</string>
    <string name="q616_5">5. Drug users</string>
    <string name="q616_6">6. People Living with HIV and AIDS</string>
    <string name="q616_7">7. People who have been in Prison </string>
    <string name="q616_8">8. Smokers</string>
    <string name="q616_9">9. Dont know</string>
    <string name="q616_other">Other Specify </string>
    <string name="q619">
      Q619. What are the signs and symptoms of TB? ............MULTIPLE RESPONSE.............NOT A READ OUT

    </string>
    <string name="q619_1">1. Rash</string>
    <string name="q619_2">2. Cough</string>
    <string name="q619_3">3. Cough that lasts longer than 3 weeks</string>
    <string name="q619_4">4. Coughing up blood</string>
    <string name="q619_5">5. Severe headache</string>
    <string name="q619_6">6. Nausea</string>
    <string name="q619_7">7. Weight loss </string>
    <string name="q619_8">8. Fever</string>
    <string name="q619_10">10. Fever without clear cause that last more than 7 days </string>
    <string name="q619_11">11. Chest pain</string>
    <string name="q619_12">12. Shortness of breath</string>
    <string name="q619_13">13. Ongoing fatique</string>
    <string name="q619_14">14. Night sweats</string>
    <string name="q619_9">9. Dont know</string>
</resources>