<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".q619">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/q619linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ScrollView

            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            app:layout_constraintBottom_toTopOf="@+id/P02Navigation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.291">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/q619" />


                <CheckBox android:id="@+id/Q619_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_1"/>


                <CheckBox android:id="@+id/Q619_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_2"/>


                <CheckBox android:id="@+id/Q619_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_3"/>


                <CheckBox android:id="@+id/Q619_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_4"/>


                <CheckBox android:id="@+id/Q619_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_5"/>


                <CheckBox android:id="@+id/Q619_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_6"/>


                <CheckBox android:id="@+id/Q619_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_7"/>


                <CheckBox android:id="@+id/Q619_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_8"/>


                <CheckBox android:id="@+id/Q619_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_10"/>

                <CheckBox android:id="@+id/Q619_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_11"/>


                <CheckBox android:id="@+id/Q619_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_12"/>


                <CheckBox android:id="@+id/Q619_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_13"/>


                <CheckBox android:id="@+id/Q619_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_14"/>


                <CheckBox android:id="@+id/Q619_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/q619_9"/>

                <CheckBox android:id="@+id/Q619_Other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Q504_Other"/>


                <EditText
                    android:id="@+id/Q619edt_Other"
                    android:layout_width="263dp"
                    android:layout_height="wrap_content"
                    android:hint="Other specify"
                    android:visibility="invisible"/>




            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/P02Navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"

        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="2"
            android:drawableLeft="@drawable/ic_arrow_back_blue_24dp"
            android:text="@string/previous" />

        <Button
            android:id="@+id/button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="2"
            android:drawableRight="@drawable/ic_arrow_forward_blue_24dp"
            android:text="@string/next" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>