<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="bw.org.statsbots.bias.MainDash">
    <group android:id="@+id/grpSort1" android:checkableBehavior="none" >
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/strLogout" />

    </group>
    <group android:id="@+id/grpSort3" android:checkableBehavior="none" >
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings" />

    </group>
    <group android:id="@+id/grpSort2" android:checkableBehavior="none" >
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/action_sync" />
    </group>
    <group android:id="@+id/grpSort4" android:checkableBehavior="none" >
    <item
        android:id="@+id/action_send"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_file_upload_black_24dp"
        android:title="@string/action_sync" />
    </group>
</menu>
